EXITS - Trips - Removing host family information from lookup account - Adding option to login using EXITS student account - Resolving display issue with breadcrumbs on firefox - Allowing PHP users to register for trips

--- a/www/exitsApplication/trips/extensions/css/baseStyle.css
+++ b/www/exitsApplication/trips/extensions/css/baseStyle.css
@@ -534,6 +534,13 @@ h1 {
 	margin:15px 0px 5px 30px;
 }
 
+.tripSubTitle {
+	color: #666;
+	font-size:1.2em;
+	display:block;
+	text-align:center;
+}
+
 .tripTitleNotes {
 	color: #999;
 	font-size:0.9em;
@@ -577,11 +584,12 @@ h1 {
 }
 
 .tripBreadCrumbNav {
-	margin-top:10px;
-	margin-bottom:10px;
+	clear:both;
 	padding:5px;
 	font-size:1em;
+	margin-top:0px;
 	font-weight:bold;
+	margin-bottom:10px;
 	background-color:#deeaf3;
 	border: thin solid #000066;
 }
@@ -667,40 +675,28 @@ table.formErrors TD.errors UL.list {
 }
 
 /* Error messages */
-div.errorContainer { 
-	display: none; 
-	margin: 10px 0 10px 0; 
-	padding: 5px 10px; 
-	border: #FC6 1px solid; 
-	background-color: #FFC; 
-}
-
 div.errors { 
-	margin: 0 0 10px 0; 
+	margin: 10px 0px 10px 0px; 
 	padding: 5px 10px; 
 	border: #FC6 1px solid; 
 	background-color: #FFC; 
 }
 
-div.errorContainer label,
 div.errors label { 
 	color:#000;
 }
 
-div.errors p,
-div.errorContainer p { 
+div.errors p { 
 	margin: 0; 
 }
 
-div.errors p em,
-div.errorContainer p em { 
+div.errors p em { 
 	color: #C00; 
 	font-style: normal; 
 	font-weight: bold; 
 }
 
-div.errors ul,
-div.errorContainer ul { 	
+div.errors ul { 	
 	text-align:left;
 	list-style-type: none;
 }
